Actualizar manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,28 @@
 {
   "name": "Campanas Parroquiales",
   "short_name": "Campanas",
-  "description": "Sistema de Control de Campanas",
-  "start_url": "index.html",
+  "description": "Sistema de Control de Campanas para templos religiosos",
+  "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#F5F1ED",
   "theme_color": "#5D4E37",
   "icons": [
     {
-      "src": "icono.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "icono.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
-  ]
+  ],
+  "categories": ["utilities", "productivity"],
+  "lang": "es-DO",
+  "dir": "ltr"
 }
