Actualizar manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -1,29 +1,31 @@
 {
-  name Campanas Parroquiales,
-  short_name Campanas,
-  description Sistema de Control de Campanas Parroquiales,
-  start_url ,
-  scope ,
-  display standalone,
-  orientation portrait,
-  background_color #FAF7F0,
-  theme_color #5D4E37,
-  icons [
+  "name": "Campanas Parroquiales",
+  "short_name": "Campanas",
+  "description": "Sistema de Control de Campanas para templos religiosos",
+  "start_url": "./index.html",
+  "scope": "./",
+  "display": "standalone",
+  "orientation": "portrait",
+  "background_color": "#FAF7F0",
+  "theme_color": "#5D4E37",
+  "icons": [
     {
-      src icon-192.png,
-      sizes 192x192,
-      type imagepng,
-      purpose any maskable
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      src icon-512.png,
-      sizes 512x512,
-      type imagepng,
-      purpose any maskable
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "icono.png",
+      "sizes": "144x144",
+      "type": "image/png"
     }
   ],
-  categories [productivity],
-  lang es,
-  dir ltr,
-  prefer_related_applications false
+  "categories": ["utilities", "productivity"],
+  "lang": "es",
+  "dir": "ltr"
 }
